# Rubicks_Cube_Solver

./: CMakeLists.txt  README.md  Rubickscube.cpp  Rubickscube.h  Rubickscube3dArray.cpp  Rubickscube3dArray.h  main.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
model/: Rubickscube.cpp  Rubickscube.h  Rubickscube1dArray.cpp  Rubickscube3dArray.cpp  RubickscubeBitboard.cpp
